; ModuleID = '/home/carl/AnghaBench/vlc/modules/packetizer/extr_mpeg4audio.c_ChannelConfigurationToVLC.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/packetizer/extr_mpeg4audio.c_ChannelConfigurationToVLC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @ChannelConfigurationToVLC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ChannelConfigurationToVLC(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp eq i32 %3, 7
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  store i32 8, i32* %2, align 4
  br label %11

6:                                                ; preds = %1
  %7 = load i32, i32* %2, align 4
  %8 = icmp sge i32 %7, 8
  br i1 %8, label %9, label %10

9:                                                ; preds = %6
  store i32 -1, i32* %2, align 4
  br label %10

10:                                               ; preds = %9, %6
  br label %11

11:                                               ; preds = %10, %5
  %12 = load i32, i32* %2, align 4
  ret i32 %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
